rabbitmq/deployment.yaml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: rabbitmq
  labels:
    name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      name: rabbitmq
  template:
    metadata:
      labels:
        name: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: image-registry.openshift-image-registry.svc:5000/rabbitmq/rabbitmq:latest
        ports:
        - containerPort: 15672
          name: management
        - containerPort: 5672
          name: rabbitmq
        - containerPort: 15692
          name: prometheus
