rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: rabbitmq
  labels:
    name: rabbitmq
spec:
  selector:
    name: rabbitmq
  ports:
  - port: 5672
    name: rabbitmq
    targetPort: rabbitmq
    protocol: TCP
  - port: 15672
    name: rabbitmq-mgmt
    targetPort: management
